app/src/main/java/com/example/filmatory/errors/Api500Error.kt
package com.example.filmatory.errors

class Api500Error(name: String) : BaseError(name){
}